--- a/src/components/headerFrame/headerFrame.css
+++ b/src/components/headerFrame/headerFrame.css
@@ -1,5 +1,7 @@
 .title-bar {
+    position: absolute;
     height: 30px;
+    width: 100%;
     background-color: #333;
     color: white;
     display: flex;
@@ -12,7 +14,6 @@
     background: none;
     border: none;
     color: white;
-    padding: 0 10px;
     cursor: pointer;
     -webkit-app-region: no-drag; /* Impede arrastar ao clicar nos botões */
 }
